--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "framer-motion": "^10.16.4",
-    "lucide-react": "^0.370.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "framer-motion": "^10.16.4",
+    "lucide-react": "^0.370.0"
   },
   "scripts": {
     "dev": "vite",
@@ -15,16 +15,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
-    "vite": "^5.0.0"
-  }
-{
-  "devDependencies": {
+    "vite": "^5.0.0",
     "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0", 
+    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0"
   }
-}
 }
